# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import issuesRouter from "./issues";
 import equipmentRouter from "./equipment";
 import adminUsersRouter from "./admin-users";
 import storageRouter from "./storage";
+import superAdminRouter from "./super-admin";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use(issuesRouter);
 router.use(equipmentRouter);
 router.use(adminUsersRouter);
 router.use(storageRouter);
+router.use(superAdminRouter);
 
 export default router;
